Fix hader z-index

--- a/app/scss/components/base/_header.scss
+++ b/app/scss/components/base/_header.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 1052;
   width: 100%;
   padding: 20px 0;
   background: rgba(16, 16, 29, .9);
